fixing header to work on tablets

--- a/app/styles/main-web.scss
+++ b/app/styles/main-web.scss
@@ -167,6 +167,7 @@ body.pre-login {
   .header h3 {
     @include make-lg-column(9);
     @include make-md-column(9);
+    @include make-sm-column(9);
     margin:0;
     font-size: 24px;
     font-weight:200;
@@ -175,6 +176,7 @@ body.pre-login {
   .header .action {
     @include make-lg-column(3);
     @include make-md-column(3);
+    @include make-sm-column(3);
     text-align: right;
 
     .primary {
@@ -194,7 +196,6 @@ body.pre-login {
   
   ul {
     @include make-lg-column(9);
-    @include make-md-column(9);
   }
   ul > li > a {
     font-size:12px;
@@ -202,7 +203,6 @@ body.pre-login {
 
   .search {
     @include make-lg-column(3);
-    @include make-md-column(3);
     text-align: right;
   }
 }
